--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer>
-  <a href="http://github.com/muan/scribble" class="muted">built with Jekyll using Scribble theme</a>
-  <br />
-  <br />
-  <img src="/images/scribble2.png" alt="scribble" /> 
+  <div class="footer-content">
+    &copy; 2015 Eric Nishio
+  </div>
 </footer>
