--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div id='container'>
+    <div class="home-ctrl">
       {% include links.html %}
       <div class="content">
           <section class='post'>
