--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div id='container'>
+    <div class="home-ctrl">
       {% include links.html %}
       {% include pages.html %}
       <div class="content">
