--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,30 @@
-<header>
-<a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59"></a>
-<p>{{ site.title }}</p>
-</header>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="brand-link" href="/" alt="{{ site.title }}">
+        <div class="brand-logo">
+          <div class="logo-text">
+            <span class="glyphicon glyphicon-home"></span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        {% for link in site.links %}
+          <li>
+            <a target="{% if link.external %}_blank{% else %}_top{% endif %}"
+               class="main"
+               href="{{ link.url }}">{{ link.name }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+</nav>
