Remove unused code

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,6 +15,23 @@
             </div>
           </div>
       </div>
+      <div class="body">
+        <div class="row">
+          <div class="content">
+            <p>Hi, I’m Eric Nishio and I specialize in JavaScript, PHP, CSS, and HTML. When I’m not developing web apps I like to study Mandarin Chinese, play guitar, and read books. Some of the tools and technologies I like to use are:</p>
+            <ul>
+              <li>AngularJS</li>
+              <li>Sails</li>
+              <li>Node.js</li>
+              <li>Sass</li>
+              <li>Gulp</li>
+              <li>Twitter Bootstrap</li>
+            </ul>
+            <p>I speak and write fluent <em>English</em>, <em>Finnish</em>, and <em>Japanese</em>, and I can also converse in <em>Mandarin Chinese</em> and <em>Swedish</em>.</p>
+            <p>I believe in minimalism and the <a href="http://en.wikipedia.org/wiki/Pareto_principle">80–20 principle</a>.</p>
+          </div>
+        </div>
+      </div>
 
       {{ content }}
     </div>
