--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,30 +6,33 @@
   </head>
   <body>
     {% include header.html %}
-    <div class="home-ctrl">
-      {% include links.html %}
-      {% include pages.html %}
-      <div class="content">
-        <section class='post'>
-          <h1 class="upcase">
-            <div class='date'>{{ page.date | date_to_string }}</div>
-            {{ page.title }}
-          </h1>
-          {{ content }}
-          {% include signoff.html %}
-
-
-        </section>
+    <div class="blog-post-ctrl">
+      <div class="header">
+        <div class="header-content">
+            <div class="container">
+              <h1 class="header-title">{{ page.title }}</h1>
+            </div>
+          </div>
       </div>
-      {% if page.share == 'y' %}
-        {% include share.html %}
-      {% endif %}
-
-      {% if page.disqus == 'y' %}
-        {% include disqus.html %}
-      {% endif %}
-      {% include links.html %}
-    </div>
+      <div class="body">
+        <div class="row">
+          <div class="content">
+            {{ content }}
+          </div>
+        </div>
+      </div>
+      <div class="body">
+        <div class="row">
+          <div class="content">
+            {% if page.share == 'y' %}
+              {% include share.html %}
+            {% endif %}
+            {% if page.disqus == 'y' %}
+              {% include disqus.html %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
     {% include footer.html %}
   </body>
 </html>
