--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,16 +9,21 @@
     <div class="home-ctrl">
       <div class="header">
         <div class="header-content">
-            <div class="container">
-              <h1 class="header-title">ericnish.io</h1>
-              <span class="header-lead">A front-end developer’s portfolio and blog</span>
-            </div>
+          <div class="container">
+            <h1 class="header-title">ericnish.io</h1>
+            <span class="header-lead">A front-end developer’s portfolio and blog</span>
           </div>
+        </div>
       </div>
       <div class="body">
         <div class="row">
           <div class="content">
-            <p>Hi, I’m Eric Nishio and I specialize in JavaScript, PHP, CSS, and HTML. When I’m not developing web apps I like to study Mandarin Chinese, play guitar, and read books. Some of the tools and technologies I like to use are:</p>
+            <p>
+              Hi, I’m Eric Nishio and I specialize in <em>JavaScript</em>, <em>PHP</em>,
+              <em>CSS</em>, and <em>HTML</em>. When I’m not developing web apps I like to
+              study Mandarin Chinese, play guitar, and read books. Some of the tools and
+              technologies I like to use are:
+            </p>
             <ul>
               <li>AngularJS</li>
               <li>Sails</li>
@@ -27,13 +32,18 @@
               <li>Gulp</li>
               <li>Twitter Bootstrap</li>
             </ul>
-            <p>I speak and write fluent <em>English</em>, <em>Finnish</em>, and <em>Japanese</em>, and I can also converse in <em>Mandarin Chinese</em> and <em>Swedish</em>.</p>
-            <p>I believe in minimalism and the <a href="http://en.wikipedia.org/wiki/Pareto_principle">80–20 principle</a>.</p>
+            <p>
+              I speak and write fluent <em>English</em>, <em>Finnish</em>, and
+              <em>Japanese</em>, and I can also converse in <em>Mandarin Chinese</em> and
+              <em>Swedish</em>.
+            </p>
+            <p>
+              I believe in minimalism and the
+              <a href="http://en.wikipedia.org/wiki/Pareto_principle">80–20 principle</a>.
+            </p>
           </div>
         </div>
       </div>
-
-      {{ content }}
     </div>
     {% include footer.html %}
   </body>
