Implement syntax highlighting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,9 @@
       <div class="body">
         <div class="row">
           <div class="content">
-            {{ content }}
+            <div class="post">
+              {{ content }}
+            </div>
           </div>
         </div>
       </div>
