--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "../_sass/common/animations";
 @import "../_sass/common/blocks";
 @import "../_sass/common/brand-logo";
+@import "../_sass/common/pygments-monokai";
 @import "../_sass/controllers/blog-post";
 @import "../_sass/controllers/blog";
 @import "../_sass/controllers/contact";
