--- a/_sass/theme/imports/_type.scss
+++ b/_sass/theme/imports/_type.scss
@@ -134,8 +134,8 @@ Markup:
 
 Styleguide 2.6
 */
+pre code,
 .code {
-  background-color: $gray-dark;
   color: $green-light;
   font-family: $inconsolata-font;
   font-size: 16px;
