--- a/_sass/theme/_variables.scss
+++ b/_sass/theme/_variables.scss
@@ -27,6 +27,7 @@ $hr-color-secondary: #fff;
 
 // Fonts
 
+$icon-font-path: "../fonts/bootstrap/";
 $glyphicons-halflings-font: 'Glyphicons Halflings';
 $clear-sans-regular-font: 'Clear Sans Regular', helvetica, sans-serif;
 $clear-sans-thin-font: 'Clear Sans Thin', helvetica, sans-serif;
