--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,21 +20,15 @@
             <div class="post">
               {{ content }}
             </div>
+            <div class="comments">
+              <div class="comments-inner">
+                {% include disqus.html %}
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="body">
-        <div class="row">
-          <div class="content">
-            {% if page.share == 'y' %}
-              {% include share.html %}
-            {% endif %}
-            {% if page.disqus == 'y' %}
-              {% include disqus.html %}
-            {% endif %}
-          </div>
-        </div>
-      </div>
+    </div>
     {% include footer.html %}
   </body>
 </html>
