Implement AdSense ad

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@
       <div class="body">
         <div class="row">
           <div class="content">
+            {% include ad.html %}
             <div class="post">
               {{ content }}
             </div>
