--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,6 @@
 </footer>
 {% include ga.html %}
 {% include addthis.html %}
+<script src="/js/jquery-1.11.3.min.js"></script>
+<script src="/js/bootstrap/collapse.min.js"></script>
+<script src="/js/bootstrap/transition.min.js"></script>
