--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="content">
             <p>
-              Hi, I’m Eric Nishio and I specialize in <em>JavaScript</em>, <em>PHP</em>,
+              Hi, I’m Eric Nishio and I specialize in <em>JavaScript</em>, <em>Node.js</em>,
               <em>CSS</em>, and <em>HTML</em>. When I’m not developing web apps I like to
               study Mandarin Chinese, play guitar, and read books. Some of the tools and
               technologies I like to use are:
@@ -27,7 +27,6 @@
             <ul>
               <li>AngularJS</li>
               <li>Sails</li>
-              <li>Node.js</li>
               <li>Sass</li>
               <li>Gulp</li>
               <li>Twitter Bootstrap</li>
