--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,17 +1,12 @@
+<title>{{ page.title }} - {{ site.title }}</title>
 <link href="/images/favicon.ico" rel="shortcut icon">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css" />
 <link href="/fonts/clearsans/clearsans.css" rel="stylesheet" type="text/css" />
 <link href="/css/main.css" rel="stylesheet" type="text/css" />
+<meta content="{{ page.title }} - {{ site.title }}" name="title"/>
+<meta content="{{ page.title }} - {{ site.title }}" property="og:title"/>
 <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
 <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-<meta content="http://muan.co/images/og.png" property="og:image" />
-<meta content="{{ site.facebook_appid }}" property="fb:app_id" />
-{% if page.date %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url" />
-  <meta content="{{ page.content | strip_html | strip_newlines | truncate: 120 }}" property="og:description" />
-  <meta content="article" property="og:type" />
-{% else %}
-  <meta content="{{ site.url }}" property="og:url" />
-  <meta content="{{ site.description }}" property="og:description" />
-  <meta content="blog" property="og:type" />
-{% endif %}
+<meta content="{{ site.url }}" property="og:url" />
+<meta content="{{ site.description }}" property="og:description" />
+<meta content="blog" property="og:type" />
