--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     {% include head.html %}
+    <link rel="canonical" href="{{ site.url }}{{ page.url }}"/>
   </head>
   <body>
     {% include navbar.html %}
