--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,11 @@
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css" />
 <link href="/fonts/clearsans/clearsans.css" rel="stylesheet" type="text/css" />
 <link href="/css/main.css" rel="stylesheet" type="text/css" />
-<meta content="{{ page.title }} - {{ site.title }}" name="title"/>
-<meta content="{{ page.title }} - {{ site.title }}" property="og:title"/>
-<meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
+<meta name="title" content="{{ page.title }} - {{ site.title }}"/>
+<meta name="description" content="{{ site.description }}"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta property="og:title" content="{{ page.title }} - {{ site.title }}"/>
+<meta property="og:url" content="{{ site.url }}"/>
+<meta property="og:description" content="{{ site.description }}"/>
+<meta property="og:type" content="blog" />
 <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-<meta content="{{ site.url }}" property="og:url" />
-<meta content="{{ site.description }}" property="og:description" />
-<meta content="blog" property="og:type" />
