Remove title from head.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>{{ page.title }}</title>
     {% include head.html %}
     <link rel="canonical" href="{{ site.url }}{{ page.url }}"/>
   </head>
