--- a/_sass/theme/_variables.scss
+++ b/_sass/theme/_variables.scss
@@ -7,6 +7,7 @@ $gray-lighter: #f5f5f5;
 $gray-light: #c0c0c0;
 $gray-medium: #999999;
 $gray-dark: #383838;
+$gray-black: #272822;
 
 $blue-light: #65a5d1;
 $blue: #3e94d1;
