--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-content">
-    &copy; 2015 Eric Nishio
+    &copy; Eric Nishio
   </div>
 </footer>
 {% include ga.html %}
