Fix code background color

--- a/_sass/theme/imports/_type.scss
+++ b/_sass/theme/imports/_type.scss
@@ -136,7 +136,7 @@ Styleguide 2.6
 code,
 pre code,
 .code {
-  background-color: $gray-black;
+  background-color: $gray-dark;
   border-radius: 0;
   color: $green-light;
   font-family: $inconsolata-font;
