Place avatar in navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,11 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="brand-link" href="/" alt="{{ site.title }}">
-        <div class="brand-logo">
-          <div class="logo-text">
-            <span class="glyphicon glyphicon-home"></span>
-          </div>
-        </div>
+        <img src="/images/eric.jpg" alt="Eric Nishio" class="brand-logo" />
       </a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
