--- a/_sass/theme/imports/_type.scss
+++ b/_sass/theme/imports/_type.scss
@@ -142,4 +142,22 @@ pre code,
   font-family: $inconsolata-font;
   font-size: 16px;
   line-height: 1.3;
+
+  a,
+  a:hover,
+  a:focus,
+  a:active {
+    color: $green-light;
+  }
+
+  a:hover {
+    color: $gray-dark;
+  }
+}
+
+.highlight {
+  code,
+  pre code {
+    background-color: transparent;
+  }
 }
