Add border radius to inline code

--- a/_sass/theme/imports/_type.scss
+++ b/_sass/theme/imports/_type.scss
@@ -137,7 +137,7 @@ code,
 pre code,
 .code {
   background-color: $gray-dark;
-  border-radius: 0;
+  border-radius: 3px;
   color: $green-light;
   font-family: $inconsolata-font;
   font-size: 16px;
