--- a/_sass/regions/_navbar.scss
+++ b/_sass/regions/_navbar.scss
@@ -3,6 +3,10 @@
 
   .brand-link {
     text-decoration: none;
+    
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   .navbar-nav {
