--- a/_sass/theme/_variables.scss
+++ b/_sass/theme/_variables.scss
@@ -34,9 +34,8 @@ $clear-sans-regular-font: 'Clear Sans Regular', helvetica, sans-serif;
 $clear-sans-thin-font: 'Clear Sans Thin', helvetica, sans-serif;
 $pt-serif-font: 'PT Serif', helvetica, sans-serif;
 $pt-sans-font: 'PT Sans', helvetica, sans-serif;
-$lato-font: 'Lato', sans-serif;
 $inconsolata-font: 'Inconsolata', monospace, courier;
-$font-family-sans-serif: $lato-font;
+$font-family-sans-serif: 'Merriweather Light', sans-serif;
 
 // Scaffolding
 
@@ -53,14 +52,14 @@ $grid-gutter-width:         30px;
 
 // Typography
 
-$font-size-base:          14px;
+$font-size-base:          20px;
 
-$headings-font-family:    $lato-font;
+$headings-font-family:    $font-family-sans-serif;
 $headings-font-weight:    400;
 $headings-line-height:    1.1;
 $headings-color:          $gray-dark;
 
-$line-height-base:        1.428571429;
+$line-height-base:        1.75;
 $line-height-computed:    floor(($font-size-base * $line-height-base));
 
 // Buttons
