--- a/_sass/theme/imports/_fonts.scss
+++ b/_sass/theme/imports/_fonts.scss
@@ -1,3 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:300,300i);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Inconsolata&subset=latin,latin-ext);
