--- a/_sass/theme/imports/_scaffolding.scss
+++ b/_sass/theme/imports/_scaffolding.scss
@@ -1,7 +1,7 @@
 body {
-  font-size: 22px;
+  // font-size: 20px; // TODO: Can delete?
   font-weight: 300;
-  line-height: 1.56;
+  // line-height: 1.56; // TODO: Can delete?
 }
 
 hr {
