--- a/_sass/theme/_variables.scss
+++ b/_sass/theme/_variables.scss
@@ -35,7 +35,7 @@ $clear-sans-thin-font: 'Clear Sans Thin', helvetica, sans-serif;
 $pt-serif-font: 'PT Serif', helvetica, sans-serif;
 $pt-sans-font: 'PT Sans', helvetica, sans-serif;
 $inconsolata-font: 'Inconsolata', monospace, courier;
-$font-family-sans-serif: 'Merriweather Light', sans-serif;
+$font-family-sans-serif: 'Merriweather', sans-serif;
 
 // Scaffolding
 
@@ -55,7 +55,7 @@ $grid-gutter-width:         30px;
 $font-size-base:          20px;
 
 $headings-font-family:    $font-family-sans-serif;
-$headings-font-weight:    400;
+$headings-font-weight:    300;
 $headings-line-height:    1.1;
 $headings-color:          $gray-dark;
 
