--- a/_sass/theme/imports/_variables.scss
+++ b/_sass/theme/imports/_variables.scss
@@ -26,7 +26,7 @@ $clear-sans-thin-font: 'Clear Sans Thin', helvetica, sans-serif;
 $pt-serif-font: 'PT Serif', helvetica, sans-serif;
 $pt-sans-font: 'PT Sans', helvetica, sans-serif;
 $inconsolata-font: 'Inconsolata', monospace, courier;
-$font-family-sans-serif: 'Merriweather Light', sans-serif;
+$font-family-sans-serif: 'Merriweather', sans-serif;
 
 // Scaffolding
 
