--- a/_sass/controllers/_projects.scss
+++ b/_sass/controllers/_projects.scss
@@ -1,4 +1,8 @@
 .projects-ctrl {
+  h2 {
+    font-size: 32px;
+  }
+
   .projects {
     @include make-md-column(6);
     @include make-md-column-offset(3);
