--- a/_sass/responsive/controllers/_projects.scss
+++ b/_sass/responsive/controllers/_projects.scss
@@ -1,5 +1,9 @@
 @media (max-width: $screen-xs-max) {
   .projects-ctrl {
+    h2 {
+      font-size: 26px;
+    }
+
     .project-url {
       font-size: 18px;
       word-break: break-all;
